# softprompt_experiments

./: README.md  generate_classification_dataset.sh  job.sh  pyproject.toml  requirements.txt  run_experiment.py  run_job.sh
datasets/math_dataset/dataset_0/: dataset.pt
datasets/math_dataset/dataset_1/: dataset.pt
src/softprompt_experiments/: InSPEcT_utils.py  __init__.py  utils.py
src/softprompt_experiments.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/softprompt_experiments/evaluations/: eval.py
src/softprompt_experiments/experiments/: human_or_ai_parser.py  logits_to_hardprompt.py  math_dataset_custom.py  math_dataset_customv2.py  math_dataset_generator.py  math_dataset_generator_custom.py  math_dataset_generatorv2.py  math_embs_to_hard_lora.py  math_embs_to_hard_lora_same.py  math_explainability.py  math_explainabilityv3.py  math_funone.py  math_inspect.py  math_logits_to_hard_lora.py  math_logits_to_hard_softprompt.py  math_lora_generator.py  math_parsability.py  math_softprompt_evaluator.py  math_softprompt_generator.py  softprompt_generator_regression.py  softprompt_verbalizer.py  text_softprompt_generator.py
src/softprompt_experiments/models/: LM_inverter.py  SoftPrompt.py  __init__.py  lora.py  openaimodel.py  softprompt.py  squishyprompt.py
src/softprompt_experiments/scripts/: classification_dataset_generator.py  compute_cosine_similarity_matrix.py  dataset_humanorai_parser.py  dataset_inversion_logits.py  dataset_math_onetok.py  dataset_nl_custom.py  implicit_cot_generator_loop.py  implicit_cot_test.py  logits_visualization.py  (+17 more)
(+36 files in other folders)
